# python-xcom-ufo-savegame

./: .gitignore  README.md  pyproject.toml
tests/: __fixtures.py  test_ufo_base.py  test_ufo_soldier.py  test_ufo_utils_datatable.py
ufo/: base.py  baserecord.py  soldier.py
ufo/records/: __init__.py  base.py  baserecord.py  soldier.py
ufo/utils/: datatable.py
